[package]
name = "scalar_set_eval"
version = "0.1.0"
authors = ["Juha Lepola <juha.lepola@gmail.com>"]

[dependencies]
    rand = "0.3"
    byteorder = "1.0"
    docopt = "0.8"
    serde = "1.0" # if you're using `derive(Deserialize)`
    serde_derive = "1.0" # if you're using `derive(Deserialize)`
    memmap = "0.5"

[dependencies.ro_scalar_set]
    path = "../ro_scalar_set"